getUnitMoveCost