@@ -15,7 +15,7 @@ class ClanTest {
         Clan c = new Clan();
         c.addTerritory(new BasicTerritory("A"));
         assertTrue(c.isActive());
-        assertEquals(new ArrayList<Territory>(Arrays.asList(new BasicTerritory("A"))), c.getOccupies());
+        assertEquals(new ArrayList<Territory>(List.of(new BasicTerritory("A"))), c.getOccupies());
     }
 
     @Test
@@ -28,7 +28,7 @@ class ClanTest {
 
     @Test
     void test_Constructor() {
-        List<Territory> l = new ArrayList<>(Arrays.asList(new BasicTerritory("A")));
+        List<Territory> l = new ArrayList<>(List.of(new BasicTerritory("A")));
         Clan c = new Clan(l);
         assertEquals(l, c.getOccupies());
     }
@@ -40,6 +40,18 @@ class ClanTest {
     Clan c = new Clan(l);
     assertTrue(c.occupyTerritory("A"));
     assertFalse(c.occupyTerritory("B"));
+  }
+
+  @Test
+    void testGetProduction() {
+        Clan clan = new Clan();
+        Territory t1 = new BasicTerritory("A", 0, new Resource(new int[]{1, 2}));
+        Territory t2 = new BasicTerritory("B", 0, new Resource(new int[]{3, 4}));
+        clan.addTerritory(t1);
+        clan.addTerritory(t2);
+        assertEquals(new Resource(new int[]{0, 0}), clan.getResource());
+        clan.getTerritoryProduction();
+        assertEquals(new Resource(new int[]{4, 6}), clan.getResource());
   }
 
 }
